@@ -12,6 +12,6 @@ buzz:
         - [ 'one', 'two', 'three' ]
 
 fizz:
-    class: My::ArgsTest
+    extends: buzz
     args:
         - { one: 'two' }
