@@ -2,6 +2,12 @@ Changelog for Beam-Wire
 
 {{ $NEXT }}
 
+    [Fixed]
+
+    - Fixed child containers not being able to reference local services.
+      Now, referencing a service in a child container that also
+      references a service in the child container works correctly.
+
 1.022     2018-08-01 22:38:58-05:00 America/Chicago
 
     [Fixed]
